# RecipeHarbor

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  mypy.ini  pyproject.toml  recipies.db  requirements.txt
src/: __init__.py  config.py  database.py
src/api/: api.py  category.py  ingredient.py  recipe.py
src/auth/: forms.py  login.py
src/models/: CategoryModel.py  IngredientModel.py  RecipeIngredientModel.py  RecipeModel.py  UserModel.py
src/static/css/: index.css
src/static/js/: index.js  recipe_details.js  scripts.js
src/templates/: base.html  index.html  login.html  recipe_details.html
src/views/: index.py  recipe_details.py
